tdf#144732: treat invalid subtype value as worksheet

Commit 9bdb1d2473510067da1ac74013595b661ac37800 for
i51490 had introduced the same change for Bof2, Bof3, Bof4.

Change-Id: I478a8611874d70fad0c83700efed5ea882d5f69f